adicionei um paragrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -10,5 +10,6 @@
     <h1>Esse é um teste de site em repositório</h1>
     <hr>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt fuga harum reprehenderit hic maiores saepe ullam aspernatur nulla id ratione! Repellendus porro vero impedit, illum et itaque tenetur quos ipsa.</p>
+    <p>Que maravilha.</p>
 </body>
 </html>
